# Dossier

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  SPEC.md  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260523_0001_initial_schema.py  20260525_0002_name_indexes.py
backend/app/: __init__.py  config.py  exporting.py  import_documents.py  main.py  matching.py
backend/app/api/: chat.py  common.py  entities.py  events.py  export.py  extractions.py  files.py  import_.py  mcp_intent.py  people.py  relationships.py  search.py  self_.py  settings.py  stages.py  timeline.py
backend/app/chat/: orchestrator.py  render.py  retrieval.py
backend/app/db/: models.py  session.py
backend/app/extraction/: applier.py  runner.py
backend/app/llm/: client.py  streaming.py
backend/app/llm/prompts/: chat_system.py
backend/app/parsers/: files.py
backend/app/schemas/: phase2.py
backend/tests/: conftest.py  test_api_contract.py  test_backup_scripts.py  test_chat.py  test_cors.py  test_crud_api.py  test_extractions.py  test_health.py  test_import_export.py  test_llm_client.py  test_mcp_intent.py  test_mcp_tools.py  test_quickstart_docs.py  test_schema.py  test_settings.py  test_timeline.py
frontend/: Dockerfile  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
mcp/: README.md  requirements.txt  server.py
scripts/: backup.sh  export-openapi.py  install-backup-cron.sh  install-deps.sh  install-mcp.sh  reset.sh  start.sh  (+1 more)
(+40 files in other folders)
