[project]
name = "dossier-backend"
version = "0.1.0"
description = "Local Dossier FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13,<2",
  "fastapi>=0.115,<1",
  "litellm>=1.73,<2",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "python-multipart>=0.0.9,<1",
  "rapidfuzz>=3.9,<4",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1",
  "pytest>=8.2,<9",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
